Bug 803835 - Part 1: Fix address book import of CSV files with quoted fields. r=mbanner.